# agentic-task-system

./: .gitignore  POSTMORTEM.md  README.md  pyproject.toml  requirements.txt
.kiro/specs/agentic-task-system/: .config.kiro  design.md  requirements.md  tasks.md
src/agentic/: __init__.py  agents.py  batcher.py  cli.py  dispatcher.py  errors.py  failure.py  models.py  orchestrator.py  planner.py  providers.py  streaming.py
tests/: __init__.py  test_agents.py  test_batcher.py  test_failure.py  test_integration.py  test_models.py  test_orchestrator.py  test_planner.py  test_providers.py  test_streaming.py
